force-app/main/default/objects/Agent_Memory__c/Agent_Memory__c.object-meta.xml
<CustomObject>
    <description>One durable memory (fact, preference, reflection, or summary) recalled into future agent runs. Written by MemoryCaptureQueueable, read by SalesforceMemoryProvider.</description>
    <label>Agent Memory</label>
    <nameField>
        <displayFormat>MEM-{0000}</displayFormat>
        <label>Agent Memory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Memories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>