force-app/main/default/objects/Agent_Memory__c/fields/Access_Count__c.field-meta.xml
<CustomField>
    <fullName>Access_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times this memory has been recalled; used for ranking and pruning.</description>
    <label>Access Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>