force-app/main/default/objects/Agent_Memory__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>Agent_Definition__mdt DeveloperName this memory belongs to. Blank = cross-agent.</description>
    <label>Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>