force-app/main/default/objects/Agent_Memory__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The memory text injected into future system prompts.</description>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>