force-app/main/default/objects/Agent_Memory__c/fields/Embedding_Json__c.field-meta.xml
<CustomField>
    <fullName>Embedding_Json__c</fullName>
    <description>Reserved for hybrid vector recall: Salesforce-side copy of the content embedding so an external index stays rebuildable.</description>
    <label>Embedding Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>