force-app/main/default/objects/Agent_Memory__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>Optional TTL; expired memories are never recalled and get pruned.</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>