force-app/main/default/objects/Agent_Memory__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Soft delete / curation flag. Inactive memories are never recalled.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>