force-app/main/default/objects/Agent_Memory__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Comma-separated LLM-extracted keywords used for recall ranking.</description>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>