force-app/main/default/objects/Agent_Memory__c/fields/Last_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Last_Accessed__c</fullName>
    <description>When this memory was last recalled into a run.</description>
    <label>Last Accessed</label>
    <type>DateTime</type>
</CustomField>