force-app/main/default/objects/Agent_Memory__c/fields/Source_Run__c.field-meta.xml
<CustomField>
    <fullName>Source_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The run this memory was extracted from (provenance).</description>
    <label>Source Run</label>
    <referenceTo>Agent_Run__c</referenceTo>
    <relationshipLabel>Extracted Memories</relationshipLabel>
    <relationshipName>Extracted_Memories</relationshipName>
    <type>Lookup</type>
</CustomField>