force-app/main/default/objects/Agent_Memory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What kind of memory: Fact (org/world knowledge), Preference (how the user likes things), Reflection (lesson the agent learned), Summary (condensed conversation).</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fact</fullName>
                <default>true</default>
                <label>Fact</label>
            </value>
            <value>
                <fullName>Preference</fullName>
            </value>
            <value>
                <fullName>Reflection</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>