force-app/main/default/objects/Agent_Memory__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of User-scoped memories.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agent_Memories</relationshipName>
    <type>Lookup</type>
</CustomField>